--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: production # Branch to update (optional; defaults to master)
-
+  media_folder: "static/images"
 publish_mode: editorial_workflow
 
 collections:
