--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,11 @@
 backend:
   name: git-gateway
   branch: production # Branch to update (optional; defaults to master)
-  media_folder: "static/images"
+#  media_folder: "static/images"
+# These lines should *not* be indented
+media_folder: "static/images" # Media files will be stored in the repo under static/images
+public_folder: "/images" # The src attribute for uploaded media will begin with /images/uploads
+
 
   publish_mode: editorial_workflow
 
