--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,5 +17,5 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "top_graphic", widget: "image"}
+     # - {label: "Featured Image", name: "top_graphic", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
