--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ publish_mode: editorial_workflow
 collections:
   - name: "post" # Used in routes, e.g., /admin/collections/blog
     label: "Post" # Used in the UI
-    folder: "posts" # The path to the folder where the documents are stored
+    folder: "content/en/post" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}/{{month}}/{{day}}/{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
